# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./teams";
 export * from "./matches";
 export * from "./highlights";
 export * from "./predictions";
+export * from "./sweepstakes";
